<resources>
    <string name="app_name">We Care</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_sign_in">Please sign or register</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Log in</string>
    <string name="enter_Licence_ID">enter Licence ID:</string>
    <string name="i_am_a_doctor">I\'am a Doctor</string>
    <string name="register">Register</string>
    <string name="password">Password:</string>
    <string name="email_address">Email Address:</string>
    <string name="user_name">User name</string>
    <string name="guide_for_doctors">Guide for Doctors</string>
    <string name="guide_for_patient">Guide for Patient</string>
    <string name="other">Other</string>
    <string name="gastroenterologist">Gastroenterologist</string>
    <string name="urologist">Urologist</string>
    <string name="rheumatologist">Rheumatologist</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="otolaryngologist">Otolaryngologist</string>
    <string name="ophthalmologist">Ophthalmologist</string>
    <string name="obstetrician_gynecologist">Obstetrician/Gynecologist</string>
    <string name="neurologist">Neurologist</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="allergist">Allergist</string>
    <string name="gp">GP</string>
    <string name="choose_kind_of_doctor">Choose kind of doctor</string>
    <string name="nephrologist">Nephrologist</string>
    <string name="posted_by">Posted by</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="dob">DOB</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="last_name_plus">Last Name:</string>
    <string name="user_name_plus">User Name:</string>
    <string name="first_name_plus">First Name:</string>
    <string name="dob_plus">DOB:</string>
    <string name="weight_plus">Weight:</string>
    <string name="sex">Sex</string>
    <string name="country_plus">Country:</string>
    <string name="name">Name</string>
    <string name="years">Years</string>
    <string name="major">Major</string>
    <string name="time">Time</string>
    <string name="country_of_work">Country of Work</string>
    <string name="major_speciality">Major Speciality</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="doctor">Doctor</string>
    <string name="added_by">added by</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="others">Others</string>
    <string name="slide_image">slide_image</string>
    <string name="patient_label">Ask doctors around the world for any diagnotics needs</string>
    <string name="doctor_label">Give back to communities in need</string>
    <string name="welcome_label">The app that everyone is talking about</string>
    <string name="title_activity_pop_camera">PopCameraActivity</string>
    <string name="next_label">WeCare is here to give a helping hand, connecting doctors around the world right to you. Yay!</string>
    <string name="Category">Category:</string>
    <string name="message1">Message:</string>
    <string name="no_message_added">No message added</string>
    <string name="you_register_successfully">You register successfully</string>
    <string name="it_takes_3_business_days_to_approve_your_account">It takes 3 business days to approve your account</string>
    <string name="please_check_your_account_latter">Please check your account latter.</string>
    <string name="my_posts_statistics">My Posts Statistics</string>
    <string name="_1">1</string>
    <string name="occupation">Occupation</string>
    <string name="type_of_doctor">Type of Doctor</string>
    <string name="country_of_practice">Country of Practice</string>
    <string name="speciality">Speciality</string>
    <string name="first_name">First Name</string>
    <string name="star">*</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="edit_profile">Edit Profile</string>

</resources>
