<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

    <LinearLayout
      android:id="@+id/linearlayout_question_related"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:orientation="horizontal">

        <TextView
          android:id="@+id/choose_doctor_textview"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/question_related"
          android:layout_gravity="center"
          android:textSize="22sp"/>

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_marginLeft="60dp"
          android:background="@drawable/arrow"/>

    </LinearLayout>

    <TextView
      android:id="@+id/doctor_post_gp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/gp"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_allergist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/allergist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_cardiologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/cardiologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_dermatologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/dermatologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_nephrologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/nephrologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_neurologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/neurologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_obstetrician"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/obstetrician_gynecologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_ophthalmologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/ophthalmologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_otolaryngologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/otolaryngologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_pediatrician"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/pediatrician"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_psychiatrist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/psychiatrist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_rheumatologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/rheumatologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_urologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/urologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_gastroenterologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/gastroenterologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_post_other"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/other"
      android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

        <AutoCompleteTextView
          android:id="@+id/input1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="message"
          android:imeOptions="actionDone"/>


    </android.support.design.widget.TextInputLayout>
</LinearLayout>