<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp">

    <RelativeLayout
      android:id="@+id/doctor_need_linearlayout"
      android:layout_width="match_parent"
      android:layout_height="40dp">

        <TextView
          android:id="@+id/choose_doctor_textview"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="1. Choose doctor you need"
          android:textSize="18sp"/>

        <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/arrow1"/>

    </RelativeLayout>

    <TextView
      android:id="@+id/doctor_gp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/gp"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_allergist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/allergist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_cardiologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/cardiologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_dermatologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/dermatologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_nephrologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/nephrologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_neurologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/neurologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_obstetrician"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/obstetrician_gynecologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_ophthalmologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/ophthalmologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_otolaryngologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/otolaryngologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_pediatrician"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/pediatrician"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_psychiatrist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/psychiatrist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_rheumatologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/rheumatologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_urologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/urologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_gastroenterologist"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/gastroenterologist"
      android:visibility="gone"/>

    <TextView
      android:id="@+id/doctor_other"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:text="@string/other"
      android:visibility="gone"/>


    <EditText
      android:id="@+id/message_ed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="2. Type your case here..."/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3. Attach medical test, photo, diagnose:"
            android:textSize="18dp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:orientation="vertical">

        <ImageButton
            android:id="@+id/add_image_patient_post"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/attach"/>


        <FrameLayout
            android:id="@+id/containerPostCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="  Post  "
            android:layout_gravity="right"
            android:textColor="#fff"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_marginTop="20dp"
      android:orientation="horizontal">

        <ImageView
          android:id="@+id/image_patient_post01"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

        <ImageView
          android:id="@+id/image_patient_post02"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

        <ImageView
          android:id="@+id/image_patient_post03"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_marginTop="20dp"
      android:orientation="horizontal">

        <ImageView
          android:id="@+id/image_patient_post04"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

        <ImageView
          android:id="@+id/image_patient_post05"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

        <ImageView
          android:id="@+id/image_patient_post06"
          android:layout_width="100dp"
          android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>


