<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      android:padding="8dp">

        <EditText
          android:id="@+id/email_login_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email_address"/>

        <EditText
          android:id="@+id/password_login_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"/>

        <Button
          android:id="@+id/sign_in_button"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="10dp"
          android:text="@string/sign_in"/>
    </LinearLayout>

    <Button
      android:id="@+id/register_button"
      android:layout_width="70dp"
      android:layout_height="30dp"
      android:layout_gravity="end"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:text="@string/register"
      android:textSize="9dp"/>


</LinearLayout>