<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.example.murodjonrahimov.wecare.DoctorProfileForm">


    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="horizontal"
      android:paddingTop="10dp"
      android:weightSum="1">

        <TextView
          android:id="@+id/first_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:hint="@string/first_name"
          android:textSize="18sp"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=" "/>

        <TextView
          android:id="@+id/last_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/last_name"
          android:textSize="18sp"/>

    </LinearLayout>


    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="20dp">

    </LinearLayout>


    <EditText
      android:id="@+id/country"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/country_of_work"/>

    <EditText
      android:id="@+id/major"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/major_speciality"/>

    <EditText
      android:id="@+id/years_of_experience"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/years_of_experience"/>

    <!--Do not change to EditText!!!!-->
    <TextView
      android:id="@+id/edit_text_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/doctor"
      android:visibility="gone"/>

    <!--Do not change to EditText!!!!-->


    <Button
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="10dp"
      android:layout_marginVertical="40dp"
      android:background="@drawable/buttonstyle"
      android:text="  Save  "
      android:textColor="#fff"/>


</LinearLayout>