<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="10dp">

    <EditText
      android:id="@+id/email_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email_address"/>

    <EditText
      android:id="@+id/password_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal">

        <EditText
          android:id="@+id/username_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/user_name"
          android:visibility="visible"/>

        <EditText
          android:id="@+id/licence_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/licence_id"
          android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:orientation="horizontal">

        <Button
          android:id="@+id/register_account"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="60dp"
          android:layout_marginTop="10dp"
          android:text="@string/register"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

            <CheckBox
              android:id="@+id/checkbox_doctor"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:text="@string/i_am_a_doctor"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>