<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:elevation="10dp">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:orientation="vertical">

            <android.support.v7.widget.CardView
              android:id="@+id/doctor_profile_card"
              android:layout_width="130dp"
              android:layout_height="130dp"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="10dp"
              app:cardCornerRadius="5dp">

                <ImageView
                  android:id="@+id/image1"
                  android:layout_width="130dp"
                  android:layout_height="130dp"
                  android:layout_gravity="center"
                  android:scaleType="centerCrop"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_toRightOf="@id/doctor_profile_card"
              android:orientation="vertical"
              android:padding="10dp">

                <TextView
                  android:id="@+id/DocName1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:textColor="#000"
                  android:textSize="18sp"/>
                <TextView
                  android:id="@+id/major"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="8dp"
                  android:text="@string/major"
                  android:textColor="#00BCD4"
                  android:textStyle="bold"/>

                <TextView
                  android:id="@+id/years_of_experience"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/years"
                  android:textColor="#555"/>

                <TextView
                  android:id="@+id/country"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/country"
                  android:textColor="#555"/>

                <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                    <TextView
                      android:id="@+id/number_of_doctors_comments1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="13dp"
                      android:text="@string/comments"
                      android:textColor="#555"/>

                    <com.jjoe64.graphview.GraphView
                      android:id="@+id/graph"
                      android:layout_width="120dip"
                      android:layout_height="120dip"
                      android:layout_alignParentRight="true"/>

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>